--- a/app/assets/stylesheets/_loading.scss
+++ b/app/assets/stylesheets/_loading.scss
@@ -20,11 +20,6 @@ $loading-fg: $black;
   padding: 0;
 }
 
-/* HACK: Firefox doesn't support flex-wrap, so we must compensate. */
-.loading, x:-moz-any-link {
-  max-width: (4 * $loading-size);
-}
-
 .loading-spinlet {
   -webkit-animation: spin $loading-speed infinite linear;
   animation: spin $loading-speed infinite linear;
@@ -55,4 +50,13 @@ $loading-fg: $black;
 @keyframes spin {
   from { opacity: 1; }
   to { opacity: 0; }
+}
+      
+//
+// .NO-FLEXWRAP
+// HACK: Firefox doesn't support flex-wrap, so we must compensate.
+//
+
+.no-flexwrap .loading {
+  max-width: (4 * $loading-size);
 }
