--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -81,31 +81,14 @@ header > .flex {
   align-items: center;
 }
 
-/* HACK: Firefox doesn't support flex-wrap, so we must compensate. */  
-.site-logo, x:-moz-any-link {
-  text-align: left;
-  width: 100%;
-}
-
 .site-nav {
   flex-wrap: nowrap;
   font: normal .8rem $font;
   width: 16rem;
 }
 
-/* HACK: Firefox doesn't support flex-wrap, so we must compensate. */  
-.site-nav, x:-moz-any-link {
-  text-align: left;
-  width: 100%;
-}
-
 .site-nav a {
   padding: .2rem 0;
-}
-
-/* HACK: Firefox doesn't support flex-wrap, so we must compensate. */  
-.site-nav a, x:-moz-any-link {
-  margin-right: 3.3%;
 }
 
 header a {
@@ -131,27 +114,27 @@ footer {
 }
 
 //
-// MEDIA QUERIES
+// .NO-FLEXWRAP
+// HACK: Firefox doesn't support flex-wrap, so we must compensate.
 //
 
-@media screen and (min-width: 440px) {
-  /* HACK: Firefox doesn't support flex-wrap, so we must compensate. */  
-  header .flex, x:-moz-any-link {
-    display: flex;
-  }
-  
-  /* HACK: Firefox doesn't support flex-wrap, so we must compensate. */  
-  .site-logo, x:-moz-any-link {
-    text-align: inherit;
-    width: auto;
-  }
-  
-  /* HACK: Firefox doesn't support flex-wrap, so we must compensate. */  
-  .site-nav, x:-moz-any-link {
-    text-align: inherit;
-    width: 16rem;
-  }
+.no-flexwrap .site-logo {
+  text-align: left;
+  width: 100%;
 }
+
+.no-flexwrap .site-nav {
+  text-align: left;
+  width: 100%;
+}
+
+.no-flexwrap .site-nav a {
+  margin-right: 3.3%;
+}
+
+//
+// MEDIA QUERIES
+//
 
 @media screen and (min-width: 50em) {
   header.section {
@@ -159,6 +142,27 @@ footer {
     position: fixed;
     width: 80%;
     top: 0;
+  }
+}
+
+//
+// MEDIA QUERIES .NO-FLEXBOX
+// HACK: Firefox doesn't support flex-wrap, so we must compensate.
+//
+
+@media screen and (min-width: 440px) {
+  .no-flexwrap header .flex {
+    display: flex;
+  }
+
+  .no-flexwrap .site-logo {
+    text-align: inherit;
+    width: auto;
+  }
+
+  .no-flexwrap .site-nav {
+    text-align: inherit;
+    width: 16rem;
   }
 }
 
